--- a/index.html
+++ b/index.html
@@ -99,15 +99,28 @@
             <button id="envoyer" type="submit" class="btn">Envoyer</button>
         </form>
     </section>
-    <footer class="footer">
-        <img src="./assets/img/FL.png" alt="Logo Footer">
-        <!--Mettre nom réseaux sociaux-->
-        <div class="social-icons">
-            <p>
-                <a class="button-link" href="https://instagram.com/basti1_b" target="_blank">Instagram</a>
-                <a class="button-link" href="https://www.linkedin.com/in/bastien-berceron-68825928a/" target="_blank">LinkedIn</a>
-            </p>
+    <footer class="site-footer">
+    <div class="footer-inner">
+        <div class="footer-brand-box">
+            <div class="brand-main">
+                <img src="./assets/img/FL.png" alt="Logo" class="f-logo">
+                <span class="f-kanji">さくら</span>
+            </div>
+            <p class="f-sub">Design, Programmation & Marketing</p>
         </div>
-    </footer>
+
+        <div class="footer-right">
+            <div class="f-socials">
+                <a href="https://www.linkedin.com/in/bastien-berceron-68825928a/" target="_blank">LinkedIn</a>
+                <a href="https://instagram.com/basti1_b" target="_blank">Instagram</a>
+                <a href="mailto:bastien.berceron@lamanu-student.fr">Contact</a>
+            </div>
+            <div class="f-legal">
+                <span>&copy; 2026 Bastien Berceron</span>
+                <button onclick="window.scrollTo({top: 0, behavior: 'smooth'})" class="back-top">↑</button>
+            </div>
+        </div>
+    </div>
+</footer>
 </body>
 </html>
