--- a/Wanderly.html
+++ b/Wanderly.html
@@ -20,7 +20,7 @@
     <div class="container">
         <!-- Image -->
         <div class="image-container">
-            <img src="./assets/img/WANF.png" alt="Wanderly">
+            <img src="./assets/img/WANDD.png" alt="Wanderly">
         </div>
 
         <!-- Description -->
@@ -34,7 +34,7 @@
                 La maquette présente une interface conviviale et attrayante, mettant en avant des visuels immersifs et une navigation intuitive.
                 Ce projet a été réalisé dans le cadre d'un projet d'UX/UI design, en utilisant Figma pour créer des prototypes interactifs.
             </p>
-            <a class="button-link" href="https://www.figma.com/proto/SlTowUyVeEsVwSzRTWhlUE/Site-de-voyage?page-id=0%3A1&node-id=188-23&viewport=112%2C228%2C0.18&t=ukVV3WRc9woMknn8-1&scaling=min-zoom&content-scaling=fixed&starting-point-node-id=120%3A13" target="_blank" rel="noopener noreferrer">Maquette desktop</a>
+            <a class="button-link" href="https://www.figma.com/proto/SlTowUyVeEsVwSzRTWhlUE/Site-de-voyage?page-id=0%3A1&node-id=188-23&viewport=500%2C229%2C0.25&t=R0vE9FcabPNhRytO-1&scaling=min-zoom&content-scaling=fixed&starting-point-node-id=120%3A13" target="_blank" rel="noopener noreferrer">Maquette desktop</a>
         </div>
     </div>
 
