feat: header centré + responsive mobile complet + menu hamburger + formulaire contact + animation loader optimisée

--- a/Micromania.html
+++ b/Micromania.html
@@ -9,11 +9,18 @@
     <header class="header">
         <nav class="navbar">
             <img class="logo" src="./assets/img/LoT.png" alt="Logo">
-            <a href="./index.html" class="nav-link">Accueil</a>
-            <a href="./index.html" class="nav-link">À propos</a>
-            <a href="./index.html" class="nav-link">Projets</a>
-            <a href="./index.html" class="nav-link">Portrait</a>
-            <a href="./index.html" class="nav-link">Contact</a>
+            <button class="menu-toggle" aria-label="Menu">
+                <span></span>
+                <span></span>
+                <span></span>
+            </button>
+            <div class="nav-links">
+                <a href="./index.html" class="nav-link">Accueil</a>
+                <a href="./index.html#about-section" class="nav-link">À propos</a>
+                <a href="./index.html#projects-section" class="nav-link">Projets</a>
+                <a href="./index.html#section-portrait" class="nav-link">Portrait</a>
+                <a href="./index.html#contact-section" class="nav-link">Contact</a>
+            </div>
         </nav>
     </header>
 
